--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" width="136" height="46" alt="Doclab home">
+        <h2>Mount Elohim Hospitals</h2>
       </a>
 
       <nav class="navbar" data-navbar>
@@ -616,7 +616,7 @@
 
               <div>
                 <p>
-                  Main Email : <a href="mailto:contact@mtelohimhospitals.com" class="contact-link">contact@&shy;mtelohimhospitals.com</a>
+                  Main Email : <a href="mailto:contact@mtelohimhospitals.com" class="contact-link">admin@&shy;mtelohimhospitals.org</a>
                 </p>
               </div>
 
@@ -654,70 +654,7 @@
 
         </div>
 
-        <ul class="footer-list" data-reveal="bottom">
-
-          <li>
-            <p class="headline-sm footer-list-title">Services</p>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">Conditions</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">Listing</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">How It Works</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">What We Offer</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">Latest News</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">Contact Us</a>
-          </li>
-
-        </ul>
-
-        <ul class="footer-list" data-reveal="bottom">
-
-          <li>
-            <p class="headline-sm footer-list-title">Useful Links</p>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">Conditions</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">Terms of Use</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">Our Services</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">Join as a Doctor</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">New Guests List</a>
-          </li>
-
-          <li>
-            <a href="#" class="text footer-link">The Team List</a>
-          </li>
-
-        </ul>
-
+        
         <div class="footer-list" data-reveal="bottom">
 
           <p class="headline-sm footer-list-title">Subscribe</p>
